[package]
name = "alrm"
version = "0.1.0"
authors = ["ValleyKnight <ValleyKnight@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
notify-rust = { version = "4.4.0", optional = true }
rodio = "0.13.1"

[features]
notify = ["notify-rust"]
